# rust-tree

./: .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZATION_PLAN.md  README.md  README.zh-CN.md
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  DEVELOPMENT.md  USER_MANUAL.md
src/: config.rs  lib.rs  main.rs
src/config/: color.rs
src/core/: collector.rs  filter.rs  mod.rs  models.rs  progress.rs  streaming.rs  walker.rs
src/formatters/: json.rs  mod.rs  streaming_tree.rs  table.rs  tree.rs
tests/: config.rs  core.rs  formatters.rs  integration_test.rs
tests/config/: color.rs
tests/core/: collector.rs  filter.rs  progress.rs  streaming.rs  walker.rs
tests/formatters/: json.rs  streaming_tree.rs  table.rs  tree.rs
