[package]
name = "rust-tree"
version = "0.1.0"
edition = "2021"
authors = ["rust-tree contributors"]
description = "A fast directory tree visualization tool with statistics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/rust-tree"
readme = "README.md"
keywords = ["cli", "tree", "filesystem", "directory"]
categories = ["command-line-utilities"]

[[bin]]
name = "rust-tree"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Directory traversal
walkdir = "2.5"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Table formatting
comfy-table = "7.1"

# Human-readable file sizes
humansize = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
